# chat-with-vid

./: .gitignore  LICENSE  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  start.sh
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  trigger-ci-2.txt  trigger-ci-3.txt  trigger-ci.txt
apps/api/app/: main.py
apps/api/app/api/v1/: __init__.py  chats.py
apps/api/app/core/: database.py  exceptions.py  logging.py
apps/api/app/models/: chat.py
apps/api/app/repository/: chat.py
apps/api/app/schemas/: chat.py
apps/api/app/services/: chat.py  video.py
apps/api/tests/: test_chat_repository.py  test_chat_schema.py  test_chat_service.py  test_chats_endpoint.py  test_url_validation.py  test_video_service.py
apps/web/: .env.local.example  Dockerfile  Dockerfile.dev  jest.config.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml
apps/web/.next/: BUILD_ID  trace  (+6 more)
docs/: architecture.md  front-end-spec.md  prd.md  project-brief.md  ui-architecture.md
docs/architecture/: 1-introduction.md  10-source-tree.md  11-infrastructure-and-deployment.md  12-error-handling-strategy.md  13-coding-standards.md  14-test-strategy-and-standards.md  15-security.md  2-high-level-architecture.md  3-tech-stack.md  4-data-models.md  5-components.md  6-external-apis.md  7-core-workflows.md  8-rest-api-spec.md  9-database-schema.md  index.md
docs/prd/: checklist-results-report.md  epic-list.md  goals-and-background-context.md  index.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
(+35 files in other folders)
